--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
 body{
     background-color: #afafaf;
+    height: 100vh;
+    width: 100%;
+    
 }
 form{
     color: #fff;
+    width: 40vh;
+    margin: 0 auto;
+    padding-top: 10%;
 }
-
