--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,12 +1,12 @@
 :root {
-  --blue: #273FAD;
-  --green: #3FAD27;
-  --red: 	#ad273f;
-  --background: #EBEBEB;
-  --shapes: #FFFFFF;
-  --text-title: #3D3D4D;
-  --text: #1C1C29;
-  --text-light: #A09CB1;
+  --blue: #7337d3;
+  --green: #3fad27;
+  --red: #ad273f;
+  --background: #b6b5b5;
+  --shapes: #ffffff;
+  --text-title: #3d3d4d;
+  --text: #1c1c29;
+  --text-light: #a09cb1;
 }
 
 * {
@@ -18,9 +18,11 @@
 body {
   font: 16px "Poppins", Arial, sans-serif;
   color: #121214;
+  background-color: #ececec;
 }
 
-input, textarea {
+input,
+textarea {
   font-family: "Poppins";
 }
 
@@ -30,6 +32,7 @@ input, textarea {
   padding: 2.5rem 1rem;
 }
 
-button, .checkmark {
+button,
+.checkmark {
   cursor: pointer;
 }
