--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,5 @@
 :root {
-  --blue: #7337d3;
+  --blue: #f82c1d;
   --green: #3fad27;
   --red: #ad273f;
   --background: #b6b5b5;
@@ -18,7 +18,7 @@
 body {
   font: 16px "Poppins", Arial, sans-serif;
   color: #121214;
-  background-color: #ececec;
+  background-color: #202020;
 }
 
 input,
