--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,5 @@
 :root {
-  --blue: #f82c1d;
+  --blue: #7c1df8;
   --green: #3fad27;
   --red: #ad273f;
   --background: #b6b5b5;
@@ -17,8 +17,8 @@
 
 body {
   font: 16px "Poppins", Arial, sans-serif;
-  color: #121214;
-  background-color: #202020;
+  color: #000000;
+  background-color: #cfcfcf;
 }
 
 input,
